# wasm_basics

./: go.mod  readme.md
app/: app.go  sim_bench_test.go  sim_test.go
cmd/wasmd/: main.go
cmd/wasmd/cmd/: commands.go  config.go  root.go
cosmwasm/: Cargo.toml  build_wasm.sh
cosmwasm/contracts/basics/: Cargo.toml
cosmwasm/contracts/basics/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
cosmwasm/contracts/basics/src/test/contract/: execute.rs  instantiate.rs  mod.rs  query.rs
cosmwasm/scripts/: execute_contract.sh  instantiate_contract.sh  query_contract.sh  query_list_code.sh  store_code.sh
testutil/network/: network.go
